# video_protect

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
ui/: __init__.py  main.py
