[tool.poetry]
name = "video-protect"
version = "0.1.0"
description = "A FastAPI application for video processing and protection"
authors = ["Pratyusha Duvvuri <pratyusha.duvvuri@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
moviepy = "^1.0.3"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
nicegui = "^1.4.14"
docutils = "0.20.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true